--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 
+<html lang="NO">
+
 <head>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8" />
+	<link rel='stylesheet' type='text/css' href='style.css'/>
 	<title>Eksamen</title>
 
 </head>
@@ -9,9 +13,39 @@
 
 <body>
 
+<div id="wrapper">
+        
+
+		<img class="header" src="header1.gif"/>
+
+	<nav class="nav">
+		
+		menylinje
+
+	</nav>
+
+	<section class="hovedtekst">
+		<p> Lorem Ipsum er rett og slett dummytekst fra og for trykkeindustrien. Lorem Ipsum har vært bransjens standard for dummytekst helt siden 1500-tallet, da en ukjent boktrykker stokket en mengde bokstaver for å lage et prøveeksemplar av en bok. Lorem Ipsum har tålt tidens tann usedvanlig godt, og har i tillegg til å bestå gjennom fem århundrer også tålt spranget over til elektronisk typografi uten vesentlige endringer. Lorem Ipsum ble gjort allment kjent i 1960-årene ved lanseringen av Letraset-ark med avsnitt fra Lorem Ipsum, og senere med sideombrekkingsprogrammet Aldus PageMaker som tok i bruk nettopp Lorem Ipsum for dummytekst. </p>
+
+	</section>
+
+	<div class="artikler">
+
+	<img class="ssw" src="ssw.png"/>
+	<img class="ssw" src="ssw.png"/>
+	<img class="ssw" src="ssw.png"/>
+	</div>
+
+	<div class="undertekst">
+
+		<p> Lorem Ipsum er rett og slett dummytekst fra og for trykkeindustrien. Lorem Ipsum har vært bransjens standard for dummytekst helt siden 1500-tallet, da en ukjent boktrykker stokket en mengde bokstaver for å lage et prøveeksemplar av en bok. Lorem Ipsum har tålt tidens tann usedvanlig godt, og har i tillegg til å bestå gjennom fem århundrer også tålt </p>
+
+	</div>
 
 
-<a class="enter" href="#"><h3>Enter</h3></a>
+
+</div>
+
 
 
 
