--- a/Index.html
+++ b/Index.html
@@ -3,55 +3,41 @@
 <html lang="NO">
 
 <head>
-
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8" />
 	<link rel='stylesheet' type='text/css' href='style.css'/>
 	<title>Eksamen</title>
-
 </head>
 
-
 <body>
-
 <div id="wrapper" class="gradient">
         
 
-		<img class="header" src="header1.gif"/>
+	<img class="header" src="header1.gif"/>
 
 	<nav class="nav">
-		
-		menylinje
-
+		<-- menylinje </-->
 	</nav>
 
 	<section class="hovedtekst">
-		<p> Lorem Ipsum er rett og slett dummytekst fra og for trykkeindustrien. Lorem Ipsum har vært bransjens standard for dummytekst helt siden 1500-tallet, da en ukjent boktrykker stokket en mengde bokstaver for å lage et prøveeksemplar av en bok. Lorem Ipsum har tålt tidens tann usedvanlig godt, og har i tillegg til å bestå gjennom fem århundrer også tålt spranget over til elektronisk typografi uten vesentlige endringer. Lorem Ipsum ble gjort allment kjent i 1960-årene ved lanseringen av Letraset-ark med avsnitt fra Lorem Ipsum, og senere med sideombrekkingsprogrammet Aldus PageMaker som tok i bruk nettopp Lorem Ipsum for dummytekst. </p>
+		<p> 
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed condimentum sapien. Sed vitae lorem vehicula, gravida velit non, vehicula nunc. Nam erat nisi, ornare a tincidunt et, commodo ut eros. Etiam at tincidunt mauris, eu consectetur odio. Nunc faucibus pretium dolor eget fermentum. Nam blandit vitae dolor at suscipit. Duis sollicitudin faucibus dui ac gravida. Donec vitae velit eget justo varius condimentum. Morbi et est felis. Mauris ullamcorper sit amet neque a tincidunt. Donec volutpat tellus non libero condimentum, non volutpat mi feugiat. Praesent consequat lacus quis dolor tempor, ac sollicitudin magna ultricies. Donec ut consequat ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget augue elementum, eleifend purus et, tincidunt diam. 
+		</p>
 
 	</section>
 
 	<div class="artikler">
-
-	<img class="ssw" src="ssw.png"/>
-	<img class="ssw" src="ssw.png"/>
-	<img class="ssw" src="ssw.png"/>
+		<img class="ssw" src="ssw.png"/>
+		<img class="ssw" src="ssw.png"/>
+		<img class="ssw" src="ssw.png"/>
 	</div>
 
 	<div class="undertekst">
-
-		<p> Lorem Ipsum er rett og slett dummytekst fra og for trykkeindustrien. Lorem Ipsum har vært bransjens standard for dummytekst helt siden 1500-tallet, da en ukjent boktrykker stokket en mengde bokstaver for å lage et prøveeksemplar av en bok. Lorem Ipsum har tålt tidens tann usedvanlig godt, og har i tillegg til å bestå gjennom fem århundrer også tålt </p>
-
+		<p> 
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed condimentum sapien. Sed vitae lorem vehicula, gravida velit non, vehicula nunc. Nam erat nisi, ornare a tincidunt et, commodo ut eros. Etiam at tincidunt mauris, eu consectetur odio. Nunc faucibus pretium dolor eget fermentum. Nam blandit vitae dolor at suscipit. Duis sollicitudin faucibus dui ac gravida. Donec vitae velit eget justo varius condimentum. Morbi et est felis. Mauris ullamcorper sit amet neque a tincidunt. Donec volutpat tellus non libero condimentum, non volutpat mi feugiat. Praesent consequat lacus quis dolor tempor, ac sollicitudin magna ultricies. Donec ut consequat ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget augue elementum, eleifend purus et, tincidunt diam.
+		</p>
 	</div>
-
-
-
 </div>
-
-
-
-
-
 </body>
-
 
 </html>
 
