--- a/Index.html
+++ b/Index.html
@@ -9,35 +9,67 @@
 </head>
 
 <body>
-<div id="wrapper" class="gradient">
-        
-
-	<img class="header" src="header1.gif"/>
+	<img class="header" src="2.jpg"/>
 
 	<nav class="nav">
-		<-- menylinje </-->
+		-- menylinje --
 	</nav>
 
 	<section class="hovedtekst">
 		<p> 
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed condimentum sapien. Sed vitae lorem vehicula, gravida velit non, vehicula nunc. Nam erat nisi, ornare a tincidunt et, commodo ut eros. Etiam at tincidunt mauris, eu consectetur odio. Nunc faucibus pretium dolor eget fermentum. Nam blandit vitae dolor at suscipit. Duis sollicitudin faucibus dui ac gravida. Donec vitae velit eget justo varius condimentum. Morbi et est felis. Mauris ullamcorper sit amet neque a tincidunt. Donec volutpat tellus non libero condimentum, non volutpat mi feugiat. Praesent consequat lacus quis dolor tempor, ac sollicitudin magna ultricies. Donec ut consequat ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget augue elementum, eleifend purus et, tincidunt diam. 
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed condimentum sapien. Sed vitae lorem vehicula, gravida velit non, vehicula nunc. Nam erat nisi, ornare a tincidunt et, commodo ut eros. Etiam at tincidunt mauris, eu consectetur odio.
 		</p>
-
 	</section>
 
-	<div class="artikler">
-		<img class="ssw" src="ssw.png"/>
-		<img class="ssw" src="ssw.png"/>
-		<img class="ssw" src="ssw.png"/>
+	<div class="artikkel_linje">
+		<div class="artikkel_linje1">
+			<img class="bilde_linje1" src="tmp.jpg"> <!-- 3:1 -->
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+			</p>
+		</div>
 	</div>
+	<div class="artikkel_linje">
+		<div class="artikkel_linje2">
+			<img class="bilde_linje2" src="tmp.jpg"> <!-- 2:1 -->
+			<p >
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+			</p>
+		</div>
+		<div class="artikkel_linje2">
+			<img class="bilde_linje2" src="tmp.jpg"> <!-- 2:1 -->
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+			</p>
+		</div>
+	</div>
+	<div class="artikkel_linje">
+		<div class="artikkel_linje3">
+			<img class="bilde_linje3" src="tmp.jpg"> <!-- 1:1 -->
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+			</p>
+		</div>
+		<div class="artikkel_linje3">
+			<img class="bilde_linje3" src="tmp.jpg"> <!-- 1:1 -->
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+			</p>
+		</div>
+		<div class="artikkel_linje3">
+			<img class="bilde_linje3" src="tmp.jpg"> <!-- 1:1 -->
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+			</p>
+		</div>
+	</div>
+	
 
 	<div class="undertekst">
 		<p> 
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed condimentum sapien. Sed vitae lorem vehicula, gravida velit non, vehicula nunc. Nam erat nisi, ornare a tincidunt et, commodo ut eros. Etiam at tincidunt mauris, eu consectetur odio. Nunc faucibus pretium dolor eget fermentum. Nam blandit vitae dolor at suscipit. Duis sollicitudin faucibus dui ac gravida. Donec vitae velit eget justo varius condimentum. Morbi et est felis. Mauris ullamcorper sit amet neque a tincidunt. Donec volutpat tellus non libero condimentum, non volutpat mi feugiat. Praesent consequat lacus quis dolor tempor, ac sollicitudin magna ultricies. Donec ut consequat ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget augue elementum, eleifend purus et, tincidunt diam.
+			2014 GWWP
 		</p>
 	</div>
-</div>
 </body>
 
 </html>
-
